matrix/deployment-mx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mx
  namespace: matrix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      k8s-app: mx
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: mx
      name: mx
    spec:
      containers:
        - name: postfix
          image: juanluisbaptiste/postfix:latest
          imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
