matrix/deployment-synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: synapse
  name: synapse
  namespace: matrix
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      k8s-app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: synapse
      name: synapse
    spec:
      containers:
        - env:
            - name: SYNAPSE_CONFIG_DIR
              value: /config
            - name: SYNAPSE_CONFIG_PATH
              value: /config/homeserver.yaml
            - name: SYNAPSE_REPORT_STATS
              value: "yes"
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  name: pg-synapse-app
                  key: password
          image: ghcr.io/element-hq/synapse:v1.162.0
          args:
            - run
            - -m
            - synapse.app.homeserver
            - --config-path
            - /config/conf.d/
          imagePullPolicy: Always
          name: synapse
          securityContext:
            privileged: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - name: http
              containerPort: 8008
          volumeMounts:
            - mountPath: /config/conf.d/homeserver.yaml
              name: cm
              subPath: homeserver.yaml
            - mountPath: /config/conf.d/secrets.yaml
              name: synapse-secrets
              subPath: secrets.yaml
            - mountPath: /config/oidc-client-secret
              name: synapse-secrets
              subPath: oidc-client-secret
            - mountPath: /config/ak-online.be.signing.key
              name: synapse-secrets
              subPath: ak-online.be.signing.key
            - mountPath: /config/as-doublepuppet.yaml
              name: synapse-secrets
              subPath: doublepuppet.yaml
            - mountPath: /config/ak-online.be.log.config
              name: cm
              subPath: ak-online.be.log.config
            - mountPath: /config/oembed-providers.json
              name: cm
              subPath: oembed-providers.json
            - mountPath: /config/as-disco-bridge.yaml
              name: disco-bridge
              subPath: registration.yaml
            - mountPath: /config/as-wa-bridge.yaml
              name: wa-bridge
              subPath: registration.yaml
            - mountPath: /config/as-gc-bridge.yaml
              name: gc-bridge
              subPath: registration.yaml
            - mountPath: /config/as-gmsg-bridge.yaml
              name: gmsg-bridge
              subPath: registration.yaml
            - mountPath: /config/as-instabridge.yaml
              name: insta-bridge
              subPath: registration.yaml
            - mountPath: /config/as-imessage.yaml
              name: imsg-bridge
              subPath: registration.yaml
            - mountPath: /config/mas-token
              name: mas
              subPath: hs_token
            - mountPath: /data
              name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 10
      volumes:
        - name: synapse-secrets
          secret:
            defaultMode: 420
            secretName: synapse
        - name: data
          persistentVolumeClaim:
            claimName: synapse
        - name: cm
          configMap:
            name: synapse
            defaultMode: 420
        - name: disco-bridge
          secret:
            secretName: as-disco-bridge
        - name: wa-bridge
          secret:
            secretName: as-wa-bridge
        - name: gc-bridge
          secret:
            secretName: as-gc-bridge
        - name: gmsg-bridge
          secret:
            secretName: as-gmsg-bridge
        - name: insta-bridge
          secret:
            secretName: as-insta-bridge
        - name: imsg-bridge
          secret:
            secretName: as-imessage-bridge
        - name: mas
          secret:
            secretName: mas
