matrix/005_postgres_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: postgres
  name: postgres-13
  namespace: matrix
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    k8s-app: postgres
    version: pg13
  sessionAffinity: None
  type: ClusterIP
