matrix/009_postgres_ext_svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: postgres
  name: postgres-external
  namespace: matrix
spec:
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
    nodePort: 32432
  selector:
    k8s-app: postgres
  sessionAffinity: None
  type: NodePort
  externalIPs:
    - 172.16.42.10
