matrix/017_svc_matrix.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
spec:
  ports:
  - name: matrix
    port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    k8s-app: matrix
  sessionAffinity: None
  type: ClusterIP
