matrix/017_svc_synapse.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  ports:
  - name: matrix
    port: 80
    protocol: TCP
    targetPort: 8008
  selector:
    k8s-app: matrix
  sessionAffinity: None
  type: ClusterIP
