matrix/service-mx.yaml
apiVersion: v1
kind: Service
metadata:
  name: mx
  namespace: matrix
spec:
  ports:
    - name: smtp
      port: 25
      protocol: TCP
      targetPort: 25
  selector:
    k8s-app: mx
  sessionAffinity: None
  type: ClusterIP
