matrix/service-synapse.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: matrix
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    k8s-app: synapse
  sessionAffinity: None
  type: ClusterIP
