matrix/018_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 550m
  name: matrix
  namespace: matrix
spec:
  ingressClassName: nginx
  rules:
  - host: matrix.cloud.ak-online.be
    http:
      paths:
      - backend:
          service:
            name: synapse
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - matrix.cloud.ak-online.be
    secretName: matrix-prod-ingress
